# Disk-Scheduling-Algorithm-Simulator

./: .gitignore  README.md  pyproject.toml  setup.py  simulator.py
src/: c_scan.py  fcfs.py  fifo.py  lstf.py  scan.py  sstf.py  teleport.py
