[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os-disk-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "ruff>=0.15.15",
    "setuptools>=82.0.1",
]

[project.scripts]
"run-simulator" = "simulator:main"

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
]

[tool.setuptools]
"py-modules" = ["simulator"]
packages = ["src"]
